# plumb

./: .editorconfig  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  book.toml  clippy.toml  deny.toml  dist-workspace.toml  justfile  lefthook.yml  release-please-config.json  requirements-dev.txt
.agents/: AGENTS.md
.cargo/: audit.toml  config.toml
crates/plumb-cdp/: AGENTS.md  Cargo.toml  README.md
crates/plumb-cdp/benches/: cdp_benchmarks.rs
crates/plumb-cdp/benches/fixtures/: README.md  fixed-dom-100-nodes.html  fixed-dom-10k-nodes.html  fixed-dom-1k-nodes.html
crates/plumb-cdp/src/: chrome_path.rs  fetcher.rs  lib.rs
crates/plumb-cdp/tests/: driver_contract.rs  persistent_browser.rs  snapshot_all_default.rs
crates/plumb-cdp/tests/fixtures/: stateful_page.html  static_page.html
crates/plumb-cli/: AGENTS.md  Cargo.toml  README.md
crates/plumb-cli/src/: banner.rs  main.rs
crates/plumb-cli/src/commands/: explain.rs  init.rs  lint.rs  mcp.rs  mod.rs  schema.rs  selector.rs  watch.rs
crates/plumb-cli/templates/: plumb-tailwind.toml
crates/plumb-cli/tests/: cli_integration.rs  init_from.rs  mcp_http.rs  mcp_stdio.rs
crates/plumb-cli/tests/snapshots/: init_from__init_from_real_project.snap
crates/plumb-codegen/: AGENTS.md  Cargo.toml  README.md
crates/plumb-codegen/src/: classify.rs  lib.rs  render.rs  ts_tokens.rs  walk.rs
crates/plumb-config/: AGENTS.md  Cargo.toml  README.md
crates/plumb-config/src/: css_props.rs  dtcg.rs  lib.rs  span.rs  validate.rs
crates/plumb-config/src/tailwind/: cache.rs  loader.js  mod.rs
crates/plumb-config/tests/: css_props_scraper.rs  dtcg_adapter.rs  load_example.rs  tailwind_adapter.rs  validation_errors.rs
crates/plumb-config/tests/fixtures/: tokens.css
crates/plumb-config/tests/fixtures/dtcg/: flat-palette.json  multi-mode.json  nested-aliases.json
crates/plumb-config/tests/fixtures/tailwind/: tailwind.config.js  tailwind.config.ts
crates/plumb-core/: AGENTS.md  Cargo.toml  README.md
crates/plumb-core/src/: config.rs  engine.rs  lib.rs  report.rs  snapshot.rs  telemetry.rs
crates/plumb-core/src/rules/: mod.rs  placeholder.rs  util.rs
crates/plumb-core/src/rules/a11y/: mod.rs  touch_target.rs
crates/plumb-core/src/rules/baseline/: mod.rs  rhythm.rs
crates/plumb-core/src/rules/color/: contrast_aa.rs  mod.rs  palette_conformance.rs
crates/plumb-core/src/rules/edge/: mod.rs  near_alignment.rs
crates/plumb-core/src/rules/opacity/: mod.rs  scale_conformance.rs
crates/plumb-core/src/rules/radius/: mod.rs  scale_conformance.rs
crates/plumb-core/src/rules/shadow/: mod.rs  scale_conformance.rs
crates/plumb-core/src/rules/sibling/: height_consistency.rs  mod.rs  padding_consistency.rs
crates/plumb-core/src/rules/spacing/: grid_conformance.rs  mod.rs  scale_conformance.rs
crates/plumb-core/src/rules/type_/: family_conformance.rs  mod.rs  scale_conformance.rs  weight_conformance.rs
crates/plumb-core/src/rules/z/: mod.rs  scale_conformance.rs
crates/plumb-core/tests/: dogfood_phase_gate.rs  engine_run_many.rs  golden_a11y_touch_target.rs  golden_baseline_rhythm.rs  golden_color_contrast_aa.rs  golden_color_palette_conformance.rs  golden_edge_near_alignment.rs  golden_hello_world.rs  golden_ignore_filter.rs  golden_opacity_scale_conformance.rs  golden_radius_scale.rs  golden_shadow_scale_conformance.rs  golden_sibling_height_consistency.rs  golden_sibling_padding_consistency.rs  golden_spacing_grid.rs  golden_spacing_scale.rs  golden_type_family_conformance.rs  golden_type_scale.rs  golden_type_weight_conformance.rs  golden_z_scale_conformance.rs  severity_override_engine.rs  snapshot_ctx.rs
crates/plumb-core/tests/snapshots/: golden_a11y_touch_target__a11y_touch_target.snap  golden_baseline_rhythm__baseline_rhythm.snap  golden_color_contrast_aa__color_contrast_aa.snap  golden_color_palette_conformance__color_palette_conformance.snap  golden_edge_near_alignment__edge_near_alignment.snap  golden_hello_world__hello_world.snap  golden_ignore_filter__golden_ignore_filter.snap  golden_opacity_scale_conformance__opacity_scale_conformance.snap  golden_radius_scale__radius_scale_conformance.snap  golden_shadow_scale_conformance__shadow_scale_conformance.snap  golden_sibling_height_consistency__sibling_height_consistency.snap  golden_sibling_padding_consistency__sibling_padding_consistency.snap  golden_spacing_grid__spacing_grid_conformance.snap  golden_spacing_scale__spacing_scale_conformance.snap  golden_type_family_conformance__type_family_conformance.snap  golden_type_scale__type_scale_conformance.snap  golden_type_weight_conformance__type_weight_conformance.snap  golden_z_scale_conformance__z_scale_conformance.snap
crates/plumb-e2e/: AGENTS.md  Cargo.toml  README.md
crates/plumb-e2e/src/: expected.rs  lib.rs  main.rs  runner.rs  server.rs  sites.rs  workspace.rs
crates/plumb-format/: AGENTS.md  Cargo.toml  README.md
crates/plumb-format/src/: lib.rs  rule_meta.rs
crates/plumb-format/tests/: determinism.rs  format_snapshots.rs
crates/plumb-format/tests/snapshots/: format_snapshots__json.snap  format_snapshots__json_stats.snap  format_snapshots__mcp_compact_structured.snap  format_snapshots__mcp_compact_text.snap  format_snapshots__pretty.snap  format_snapshots__pretty_grouped.snap  format_snapshots__sarif.snap
crates/plumb-mcp/: AGENTS.md  Cargo.toml  README.md
crates/plumb-mcp/rule-docs/: a11y-touch-target.md  baseline-rhythm.md  color-contrast-aa.md  color-palette-conformance.md  edge-near-alignment.md  opacity-scale-conformance.md  radius-scale-conformance.md  shadow-scale-conformance.md  sibling-height-consistency.md  sibling-padding-consistency.md  spacing-grid-conformance.md  spacing-scale-conformance.md  type-family-conformance.md  type-scale-conformance.md  type-weight-conformance.md  z-scale-conformance.md
crates/plumb-mcp/src/: compare_viewports.rs  explain.rs  lib.rs
crates/plumb-mcp/tests/: mcp_protocol.rs
xtask/: AGENTS.md  Cargo.toml
xtask/src/: main.rs
(+252 files in other folders)
