[package]
name = "xtask"
description = "Plumb developer task runner — emits schema, regenerates docs, runs pre-release checks."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
plumb-config = { workspace = true }
plumb-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[lints]
workspace = true
