[package]
name = "plumb-cdp"
description = "Chromium DevTools Protocol driver for Plumb — renders pages to PlumbSnapshot."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
exclude = ["AGENTS.md", "CLAUDE.md"]

[features]
default = []
# Opt-in flag for end-to-end tests that need a real Chromium binary in
# the supported major-version range on the host. Off in `just validate`
# / CI; flip on for local smoke runs.
# Pulls in `plumb-core/test-fake` so `FakeDriver::snapshot` (which calls
# `PlumbSnapshot::canned`) builds without dev-deps.
e2e-chromium = ["plumb-core/test-fake"]

[dependencies]
plumb-core = { workspace = true }
# `_fetcher-rustls-tokio` enables `chromiumoxide::fetcher::BrowserFetcher`
# (Chrome-for-Testing download) used by the auto-fetch path (issue #78).
# The rustls transport matches the workspace `reqwest` policy.
chromiumoxide = { workspace = true, features = ["_fetcher-rustls-tokio"] }
futures-util = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
# Cookie / header / storage-state plumbing (PRD §15) — `Headers` in
# chromiumoxide is a `serde_json::Value` wrapper; storage-state.json
# parsing uses serde with `deny_unknown_fields`.
serde = { workspace = true }
serde_json = { workspace = true }
# WHATWG URL parsing — `Url::origin().ascii_serialization()` handles
# default-port elision, IDNA host normalization, scheme case-folding,
# and stripping of userinfo / path / query / fragment so the
# storage-state origin compare matches Playwright's stored format.
url = { workspace = true }
# SHA-256 verification of auto-fetched Chromium binaries (issue #78).
sha2 = { workspace = true }

[dev-dependencies]
plumb-core = { workspace = true, features = ["test-fake"] }
tokio = { workspace = true, features = ["test-util"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "cdp_benchmarks"
harness = false

[lints]
workspace = true
