[package]
name = "plumb-cli"
description = "Plumb command-line interface — the `plumb` binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "plumb"
path = "src/main.rs"

[dependencies]
plumb-core = { workspace = true, features = ["test-fake"] }
plumb-format = { workspace = true }
plumb-config = { workspace = true }
plumb-cdp = { workspace = true }
plumb-mcp = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
