[package]
name = "plumb-cli"
description = "Plumb command-line interface — the `plumb` binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
exclude = ["AGENTS.md", "CLAUDE.md"]

[[bin]]
name = "plumb"
path = "src/main.rs"

[dependencies]
plumb-core = { workspace = true, features = ["test-fake"] }
plumb-format = { workspace = true }
plumb-config = { workspace = true }
plumb-cdp = { workspace = true }
plumb-mcp = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
# CSS selector matcher for `--selector` (PRD §15.4). `errors` exposes the
# selector parser's error types; `deterministic` keeps internal hash maps
# deterministic so filter output is byte-stable across runs.
scraper = { version = "0.26", default-features = false, features = ["errors", "deterministic"] }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }

[lints]
workspace = true
