[package]
name = "plumb-cli"
description = "Plumb command-line interface — the `plumb` binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme = "README.md"
# Per-crate keywords override the workspace defaults so the npm package
# (cargo-dist copies these into the npm `package.json` keywords field
# alongside `categories`) leads with `cli` — the term npm searchers use.
# crates.io caps at 5 keywords; alphanumeric + dash + underscore only.
keywords = ["cli", "linter", "design-system", "mcp", "chromium"]
categories.workspace = true
exclude = ["AGENTS.md", "CLAUDE.md"]

[[bin]]
name = "plumb"
path = "src/main.rs"

[dependencies]
plumb-core = { workspace = true, features = ["test-fake"] }
plumb-format = { workspace = true }
plumb-config = { workspace = true }
plumb-codegen = { workspace = true }
plumb-cdp = { workspace = true }
plumb-mcp = { workspace = true }
clap = { workspace = true }
# `signal` feature: needed by `plumb watch` (#83) for `tokio::signal::ctrl_c`.
# The workspace tokio dep stays minimal; adding it as a per-crate feature
# keeps libraries that don't run the watcher from pulling the dep.
tokio = { workspace = true, features = ["signal"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
# CSS selector matcher for `--selector` (PRD §15.4). `errors` exposes the
# selector parser's error types; `deterministic` keeps internal hash maps
# deterministic so filter output is byte-stable across runs.
scraper = { version = "0.27", default-features = false, features = ["errors", "deterministic"] }
# Filesystem watcher for `plumb watch` (#83). The debouncer collapses
# bursts (editor save → temp file dance → atomic rename) into a single
# cycle so the lint inner call runs at most once per debounce window.
notify = { workspace = true }
notify-debouncer-full = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
insta = { workspace = true }
serial_test = { workspace = true }

[lints]
workspace = true
