[package]
name = "plumb-config"
description = "Config loading and JSON Schema emission for Plumb."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
exclude = ["AGENTS.md", "CLAUDE.md"]

[dependencies]
plumb-core = { workspace = true }
figment = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
sha2 = { workspace = true }
dunce = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
