[package]
name = "plumb-format"
description = "Output formatters for Plumb violations — pretty, JSON, SARIF, MCP-compact."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
plumb-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
plumb-core = { workspace = true, features = ["test-fake"] }
insta = { workspace = true, features = ["json"] }

[lints]
workspace = true
