[package]
name = "plumb-format"
description = "Output formatters for Plumb violations — pretty, JSON, SARIF, MCP-compact."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
exclude = ["AGENTS.md", "CLAUDE.md"]

[dependencies]
plumb-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
plumb-core = { workspace = true, features = ["test-fake"] }
indexmap = { workspace = true }
insta = { workspace = true, features = ["json"] }

[lints]
workspace = true
