[package]
name = "plumb-mcp"
description = "Model Context Protocol server for Plumb."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# `test-fake` is enabled so the walking-skeleton `lint_url` tool can
# serve the canned snapshot until the real Chromium driver lands.
plumb-core = { workspace = true, features = ["test-fake"] }
plumb-config = { workspace = true }
plumb-format = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
plumb-core = { workspace = true, features = ["test-fake"] }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
