[package]
name = "plumb-mcp"
description = "Model Context Protocol server for Plumb."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# `test-fake` keeps the canned snapshot path available for
# `plumb-fake://` URLs alongside the real Chromium driver path.
plumb-cdp = { workspace = true }
plumb-core = { workspace = true, features = ["test-fake"] }
plumb-format = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
plumb-core = { workspace = true, features = ["test-fake"] }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
