[package]
name = "plumb-mcp"
description = "Model Context Protocol server for Plumb."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
exclude = ["AGENTS.md", "CLAUDE.md"]

[dependencies]
# `test-fake` keeps the canned snapshot path available for
# `plumb-fake://` URLs alongside the real Chromium driver path.
plumb-cdp = { workspace = true }
plumb-core = { workspace = true, features = ["test-fake"] }
plumb-config = { workspace = true }
plumb-format = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
subtle = { workspace = true }

[features]
# Opt-in gate for tests that drive a real Chromium binary (e.g.
# `lint_page_html` rendering a `data:` URL). Mirrors plumb-cdp's
# `e2e-chromium` feature; off by default so the unit suite never needs a
# browser.
e2e-chromium = []

[dev-dependencies]
plumb-core = { workspace = true, features = ["test-fake"] }
tokio = { workspace = true, features = ["test-util"] }
indexmap = { workspace = true }

[lints]
workspace = true
